--- a/Views/Employees/Create.cshtml
+++ b/Views/Employees/Create.cshtml
@@ -4,43 +4,43 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1 class="h1-index">Inserir funcionario</h1>
 
-<h4>Employee</h4>
+<h4 class="h4">Dados</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FirtName" class="control-label"></label>
-                <input asp-for="FirtName" class="form-control" />
+                <label style="color: white;" asp-for="FirtName" class="control-label"></label>
+                <input placeholder="Nome..." asp-for="FirtName" class="form-control" />
                 <span asp-validation-for="FirtName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
+                <label style="color: white;" asp-for="LastName" class="control-label"></label>
+                <input placeholder="Sobrenome..." asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmpCode" class="control-label"></label>
-                <input asp-for="EmpCode" class="form-control" />
+                <label style="color: white;" asp-for="EmpCode" class="control-label"></label>
+                <input type="number" placeholder="Codigo..." asp-for="EmpCode" class="form-control" />
                 <span asp-validation-for="EmpCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Position" class="control-label"></label>
-                <input asp-for="Position" class="form-control" />
+                <label style="color: white;" asp-for="Position" class="control-label"></label>
+                <input placeholder="Cargo..." asp-for="Position" class="form-control" />
                 <span asp-validation-for="Position" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a style="color: white;" asp-action="Index">Voltar para a lista</a>
 </div>
 
 @section Scripts {
