--- a/Views/Employees/Delete.cshtml
+++ b/Views/Employees/Delete.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1 class="h1-index">Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="h4">Deseja realmente apagar os dados?</h3>
 <div>
-    <h4>Employee</h4>
+    <h4 class="h4">Funcionario</h4>
     <hr />
-    <dl class="row">
+    <dl style="color: white;" class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirtName)
         </dt>
@@ -39,7 +39,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn-Delete1" /> 
+        <a style="color: white;" asp-action="Index">Voltar para a lista</a>
     </form>
 </div>
