--- a/Views/Employees/Edit.cshtml
+++ b/Views/Employees/Edit.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 class="h1-index">Editar</h1>
 
-<h4>Employee</h4>
+<h4 class="h4">Funcionario</h4>
 <hr />
-<div class="row">
+<div style="color: white;" class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -34,14 +34,14 @@
                 <span asp-validation-for="Position" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input  type="submit" value="Salvar" class="btn btn-success " />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a style="color: white;" asp-action="Index">Voltar para a lista</a>
 </div>
 
 @section Scripts {
