--- a/Views/Employees/Index.cshtml
+++ b/Views/Employees/Index.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="h1-index">Funcionarios</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <buton class="btn-criar" > <a class="btn-criar a" asp-action="Create">Adicionar funcionario</a> </buton>
 </p>
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
@@ -43,9 +43,9 @@
                 @Html.DisplayFor(modelItem => item.Position)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="btn-Edit" asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
+                <a class="btn-Details" asp-action="Details" asp-route-id="@item.Id">Details</a> 
+                <a class="btn-Delete" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
